<resources>
    <string name="app_name">CrickPlay3</string>
    <string name="Main_logo">CrickPlay</string>
    <string name="text_Email">Email Address</string>
    <string name="text_Password">Password</string>
    <string name="password_hint">Password</string>
    <string name="Login_btn">Login</string>
    <string name="Signup_btn">Signup</string>
    <string name="text_password">Password</string>
    <string name="Register_btn">Signup</string>
    <string name="already_have_account_btn">Already have an Account</string>
</resources>
